[add]img,button,text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<title>js-dom-1</title>
 </head>
 <body>
-
+<img id="lampOff" src="./img/white_lamp.png" alt="lampOff">
+<button id="accendi" class="btn btn-primary">Accendi</button>
 
 <script src="./js/script.js"></script>
 </body>
